1.18-4.0.7:
- Fixed a rendering issue with the ghost items in the crafter. They were not faded
- Fixed a bug when remembering items in the crafter. This would also lock some of the player inventory slots
- Fixed a bug in the crafter where manually inputting a recipe (as opposed to letting it be done by JEI) didn't work properly

1.18-4.0.6:
- Fixed a crash in the digit block

1.18-4.0.5:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-4.0.4:
- Fixed a bad capability in RFToolsUtility

1.18-4.0.3:
- Made the dialer more performant by also putting the access information in the teleportation data so that we don't need to get the matter receiver(s)
- Fixed inter-dimensional teleportation
- The screen didn't work properly below 0
- The screen controller couldn't detect screens below 0
- The dialing device was not correctly finding transmitters below 0

1.18-4.0.2:
- Updates for McJtyLib and fixes
- Screens render correctly now

1.18-4.0.1:
- Small fix for recipe manager
- Fixed a bug in the redstone information module
- Fixed the tablet

1.18-4.0.0:
- First release in 1.18

1.16-3.1.7:
- Fixed crash when linking the charged porter on a server
- Fixed a bug where the environmental controller only started working as soon as something like the radius is changed

1.16-3.1.6:
- Big fixes on the crafter. It works much cleaner now, will actually remember recipes and works properly with JEI (instead of only now and then)
- The matter transmitter and receiver private modes now work correctly even if the receiver and/or transmitter is in another dimension

1.16-3.1.5:
- Added a new 'cleanupreceivers' command that you can use to clean up receivers that no longer exist. This can be used after removing a dimension to get rid of the destination in the dialer

1.16-3.1.4:
- Updated to latest version of McJtyLib
- Fixed a few bugs in the matter booster en destination analyzer
- Made the timer and sequencer integer inputs less annoying to edit